--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <modules>
         <module>user-service</module>
         <module>notification-service</module>
+        <module>discovery-server</module>
     </modules>
 
     <properties>
