chore: update application config for user-service and notification-service

--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.kafka.consumer.group-id=notification-group
 logging.level.root=INFO
 logging.level.org.springframework.web=INFO
 logging.level.by.task=DEBUG
+
+spring.application.name=user-service
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
