--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -22,3 +22,6 @@ spring.mail.properties.mail.smtp.starttls.enable=false
 logging.level.root=INFO
 logging.level.org.springframework.kafka=DEBUG
 logging.level.by.seregov.notification=DEBUG
+
+spring.application.name=notification-service
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
