--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>user-service</module>
         <module>notification-service</module>
         <module>discovery-server</module>
+        <module>gateway-api</module>
     </modules>
 
     <properties>
