chore: configure eureka instance with localhost and ip preference

--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -24,4 +24,7 @@ logging.level.org.springframework.kafka=DEBUG
 logging.level.by.seregov.notification=DEBUG
 
 spring.application.name=notification-service
+
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.instance.hostname=localhost
+eureka.instance.prefer-ip-address=true
