--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -15,4 +15,7 @@ logging.level.org.springframework.web=INFO
 logging.level.by.task=DEBUG
 
 spring.application.name=user-service
+
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.instance.prefer-ip-address=true
+eureka.instance.hostname=localhost
